--- a/css/styles.css
+++ b/css/styles.css
@@ -121,9 +121,9 @@ a {
 .contact-link:focus {
   color: var(--hover-focus-color);
   font-style: normal;
-  transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
-}
+
 
 .phone-number {
   display: inline-block;
@@ -136,9 +136,9 @@ a {
 .contact-link:hover .contact-email,
 .contact-link:focus .contact-email {
   --color4: var(--hover-focus-color);
-  transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
-}
+
 
 .contact-email {
   display: inline-block;
@@ -152,9 +152,9 @@ a {
 .contact-link:hover .phone-number,
 .contact-link:focus .phone-number {
   --color4: var(--hover-focus-color);
-  transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  /* transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
-}
+
 
 
 
@@ -170,6 +170,8 @@ a {
   display: inline-block;
   padding-top: 32px;
   padding-bottom: 32px;
+  position: relative;
+  
   
   
 
@@ -178,6 +180,36 @@ a {
 .nav-option:hover,
 .nav-option:focus {
   color: var(--h123-link-color);  
+}
+
+.nav-option::after {
+  content: "";
+  
+  width: 100%;
+  height: 4px;
+  background-color: var(--hover-focus-color);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  opacity: 0;
+  
+}
+
+.nav-option:hover::after
+ {
+  opacity: 1;
+  transition: opacity  250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-option:focus::after {
+  opacity: 1;
+  background-color: var(--hover-focus-color);
+  transition: opacity  250ms cubic-bezier(0.4, 0, 0.2, 1);  
+}
+
+.nav-option:active::after {
+  opacity: 1;
+    
 }
 a {
     
@@ -202,9 +234,9 @@ letter-spacing: 0.02em;
 .nav-option:hover,
 .nav-option:focus {
   color: var(--hover-focus-color);
-  transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
-}
+
 /* display: inline-block;
   border: 1px solid transparent;
   border-radius: 6px;
@@ -361,9 +393,9 @@ justify-content: center;
   --color2: #2196f3;
   --color3: #2196f3;
   cursor: pointer;
-  transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
-}
+
 
 .section-title {
   text-align: left;
@@ -421,6 +453,7 @@ justify-content: center;
   background-color: var(--main-bg-color);
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
+
 }
 
 .member .member-name {
@@ -458,10 +491,11 @@ justify-content: center;
 { fill: var(--main-bg-color);
   background-color: var(--hover-focus-color);
   border-radius: 44px;
-  transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
-}
+
 
 
 
@@ -496,7 +530,8 @@ h3 {
 .filter-button:focus {
   font-family: Roboto;
   background-color: var(--hover-focus-color);
-  transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
 }
 
 .filter-item {
@@ -525,8 +560,8 @@ h3 {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.12), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 3px 1px rgba(0, 0, 0, 0.1);
 border-radius: 4px;
 cursor: pointer;
-transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 
@@ -580,9 +615,10 @@ transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
 .portfolio:active {
   color: var(--hover-focus-color);
   text-decoration: underline;
-  transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+ 
 }
-}
+
 
 
 
@@ -641,8 +677,8 @@ transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
 .blue-text:hover {
   background-color: var(--hover-focus-color);
   line-height: 1.55;
-  transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
 
 
@@ -691,7 +727,7 @@ transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .portfolio-item:hover {
   box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
-  transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition:  box-shadow  250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .port-text {
@@ -812,9 +848,10 @@ footer {
 .footer-item:focus {
   background-color: var(--hover-focus-color);
   border-radius: 50%;
-  transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
-}
+
 
 .social-list .footer-item:not(:last-child) {
   margin-right: 10px;
@@ -837,8 +874,9 @@ footer {
  .social-option:focus {
   color: var(--main-bg-color);
   background-color: var(--hover-focus-color);
-  transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+
 }
 
 
@@ -848,9 +886,9 @@ footer {
 
 .social-option:hover .icon-social{
   --color5: #ffffff; 
-  transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
 }
-}
+
 
 .company-logo {
   --color5: #AFB1B8;
@@ -860,15 +898,15 @@ footer {
 .logo-first:hover .company-logo{
 --color5: var(--hover-focus-color);
 cursor: pointer;
-transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
-} 
+
 
 .client-item:hover {
   border: 1px solid  var(--hover-focus-color);
-  transition: transform  250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+ 
+
 }
 
 .logo-first {
