--- a/css/styles.css
+++ b/css/styles.css
@@ -255,7 +255,7 @@ letter-spacing: 0.02em;
 
 /* Page header */
 
-.overlay {
+.overlay-image {
   max-width: 1600px;
   height: 600px;
   margin-right: auto;
@@ -524,6 +524,45 @@ h3 {
 
 .section-portfolio {
   padding-top: 100px;
+}
+
+.overlay {
+  position: relative;
+    overflow: hidden;
+}
+
+.portfolio-item:focus .content-text,
+.portfolio-item:hover .content-text{
+    transform: translateY(0%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.content-text {
+  position: absolute;
+    display: flex;
+    top: 0px;
+    left: 0px;
+    min-width: 100%;
+    height: 100%;
+
+    transform: translateY(101%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    color: var(--primary-white-color);
+    background: rgba(33, 150, 243, 0.9);
+    padding: 63px 24px 63px 24px;
+    margin: 0px;
+
+    font-size: 18px;
+    line-height: 1.6;
+}
+
+
+.block {
+  border: 1px solid #EEEEEE;
+    /* border-radius: 0px 0px 5px 5px; */
+
+    padding: 24px 20px;
 }
 
 .filter-button:hover,
