--- a/css/styles.css
+++ b/css/styles.css
@@ -548,7 +548,7 @@ h3 {
     transform: translateY(101%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    color: var(--primary-white-color);
+    color: var(--main-bg-color);
     background: rgba(33, 150, 243, 0.9);
     padding: 63px 24px 63px 24px;
     margin: 0px;
