--- a/css/styles.css
+++ b/css/styles.css
@@ -199,6 +199,8 @@ a {
  {
   opacity: 1;
   transition: opacity  250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: var(--hover-focus-color);
+   
 }
 
 .nav-option:focus::after {
@@ -207,10 +209,26 @@ a {
   transition: opacity  250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 
-.nav-option:active::after {
-  opacity: 1;
-    
+.current {
+  color: var(--hover-focus-color);
+  position: relative;
 }
+
+.current:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background: var(--hover-focus-color);
+  border-radius: 2px;
+  opacity: 1;
+}
+
+
+ 
 a {
     
   color: var(--h123-link-color);
