--- a/css/styles.css
+++ b/css/styles.css
@@ -225,6 +225,7 @@ a {
   background: var(--hover-focus-color);
   border-radius: 2px;
   opacity: 1;
+  transition: opacity  250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 
