--- a/css/styles.css
+++ b/css/styles.css
@@ -505,7 +505,14 @@ justify-content: center;
   .social-list .social-item:not(:last-child) {
     margin-right: 10px;
 }
-.social-item:hover,
+.social-item:hover
+{fill: var(--main-bg-color);
+  background-color: var(--hover-focus-color);
+  border-radius: 44px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+}
+
 .social-item:focus 
 { fill: var(--main-bg-color);
   background-color: var(--hover-focus-color);
@@ -513,6 +520,7 @@ justify-content: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
+
 
 
 
@@ -528,6 +536,7 @@ justify-content: center;
   margin-right: 30px;
   width: calc((100% - 150px) / 6);
   border: 1px solid #AFB1B8;
+  border-radius: 4px;
 }
 
 .client-item:last-child {
@@ -751,10 +760,10 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-item {
-  
+  width: calc((100% - 60px) / 3);
   display: block;
   box-sizing: border-box;
-  width: calc((100% - 60px)/ 3);
+  
 
   margin-right: 30px;
   margin-bottom: 30px;
@@ -772,6 +781,9 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-right: 0;
 }
 
+.image-portfolio {
+  width: 370px;
+}
 
 
 .portfolio-item:nth-last-child(-n + 3) {
@@ -781,6 +793,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding-left: 24px;
   padding-top: 20px;
   padding-right: 24px;
+  margin-bottom: 4px;
 }
 
 .portfolio-item:hover {
@@ -963,9 +976,15 @@ cursor: pointer;
 
 .client-item:hover {
   border: 1px solid  var(--hover-focus-color);
+  border-radius: 4px;
  
 
 }
+
+.client-item:focus {
+  border: 1px solid  var(--hover-focus-color);
+  border-radius: 4px;
+ }
 
 .logo-first {
   min-width: 170px;
