--- a/css/styles.css
+++ b/css/styles.css
@@ -195,7 +195,7 @@ a {
   
 }
 
-.nav-option:hover::after
+/* .nav-option:hover::after
  {
   opacity: 1;
   transition: opacity  250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -207,7 +207,7 @@ a {
   opacity: 1;
   background-color: var(--hover-focus-color);
   transition: opacity  250ms cubic-bezier(0.4, 0, 0.2, 1);  
-}
+} */
 
 .current {
   color: var(--hover-focus-color);
@@ -782,6 +782,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .image-portfolio {
+  display: inline-block;
   width: 370px;
 }
 
