--- a/css/styles.css
+++ b/css/styles.css
@@ -761,6 +761,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .portfolio-item {
   width: calc((100% - 60px) / 3);
+  
   display: block;
   box-sizing: border-box;
   
@@ -770,8 +771,7 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   align-content: center;
   
   
-  border-radius: 5px;
-  border: 1px solid #EEEEEE;
+  
   overflow: hidden;
 }
 
@@ -782,7 +782,10 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .image-portfolio {
+  display: block;
     width: 370px;
+    height: 294px;
+    box-sizing: border-box;
 }
 
 
